ingress-controller/service-default-http-backend.yaml
apiVersion: v1
kind: Service
  name: default-http-backend
  namespace: app-space
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: default-backend
  type: ClusterIP
